airflow/dag/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: o11y-ingress
  namespace: airflow
  # <1>
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    # <2>
    - host: airflow.nsa2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  name: airflow-ui
